Fixed highlighting issue on interactive toppers on mobile

--- a/style.css
+++ b/style.css
@@ -1239,5 +1239,7 @@ p {
     z-index: 9;
   }
   
-
+  .topper-image-wrapper > .character-sprite {
+   -webkit-tap-highlight-color: transparent;
+  }
 }
